Wed Feb  2 20:25:18 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be_include/be_visitor_arg_traits.h:
        
          Added visit_attribute() method, which tales action
          only if the attribute type is an unaliased bounded (w)string.
          Thanks to Gary Maxey <gary.maxey@hp.com> for sending in
          the example IDL file that showed that the arg_traits
          visitor was not handling this case.
          
        * tests/IDL_Test/interface.idl:
        
          Added Gary Maxey's example IDL file to the test.

Wed Feb  2 19:26:22 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_sequence.cpp:
        
          Added missing comma in template parameter list of bounded
          CORBA::Object sequence base class. Thanks to Gary Maxey
          <gary.maxey@hp.com> for tracking down the problem.

Wed Feb  2 06:45:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * NEWS:

          Updated with information about PMB and GIOP fragments.

Wed Feb  2 09:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:
          Use ACE_OS::strtok instead of strtok directly and replaced usage
          of NULL with 0

        * orbsvcs/orbsvcs/PortableGroup/PG_PropertyManager.h:
          Include SString.h instead of SStringfwd.h to fix compile errors
          with vc71

Tue Feb  1 20:02:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_BaseC.cpp:
        * tao/IFR_Client/IFR_BasicC.cpp:
        * tao/IFR_Client/IFR_ComponentsC.cpp:
        * tao/IFR_Client/IFR_ExtendedC.cpp:
          Regenerated with the latest version of the TAO_IDL compiler

Tue Feb  1 19:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/ServerObjectC.cpp:
        * tao/PortableServer/ServerObjectA.cpp:
        * tao/PortableServer/ImplRepoC.cpp: